--- a/web/app/index.html
+++ b/web/app/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="styles/style.css">
         <!-- endbuild -->
 </head>
-    <body>
+    <body data-spy="scroll" data-target=".navbar-scroll-spy">
         <!-- build:js(app) scripts/components.js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/handlebars/handlebars.runtime.js"></script>
