--- a/web/app/index.html
+++ b/web/app/index.html
@@ -13,6 +13,7 @@
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <script src="bower_components/handlebars/handlebars.runtime.js"></script>
         <script src="bower_components/cryptojslib/rollups/md5.js"></script>
+        <script src="bower_components/d3/d3.js"></script>
         <script src="@@ember"></script>
         <script src="@@ember_data"></script>
         <!-- endbuild -->
